SimSystem: Use Java 11 isBlank