@@ -236,7 +236,7 @@ public final class StatisticsMultiPerformanceIndicator extends StatisticsPerform
 	protected void addToXMLIntern(final Element node, final StringBuilder recycleStringBuilder) {
 		for (Map.Entry<String,StatisticsPerformanceIndicator> entry : indicators.entrySet()) {
 			Element sub=entry.getValue().addToXML(node.getOwnerDocument(),node,recycleStringBuilder);
-			if (!entry.getKey().trim().isEmpty()) sub.setAttribute(xmlTypeName[0],entry.getKey());
+			if (!entry.getKey().isBlank()) sub.setAttribute(xmlTypeName[0],entry.getKey());
 		}
 	}
 
